--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Reservrant</string>
     <string name="noti_name">All reservations were removed.</string>
+    <string name="search_hint">Search by name</string>
 </resources>
